assets/scss/journal.scss
$color-accent: #1976d2;
//$color-accent: #330000;
$back-container-background: #fcfcfc;
$front-container-background: #ffffff;

$default-font-list: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
$mono-font-list: "Fira Mono", "Cousine", Monaco, Menlo, "Source Code Pro",
  monospace;
//$sans-preferred-font-list: "Montserrat", "Roboto", "Source Sans Pro", "Helvetica", $default-font-list;
$sans-preferred-font-list: $default-font-list;

$side-container-width: 25%; //280px;
$extra-container-width: 25%;
$extra-container-pagination-width: 64px;
$stream-container-max-width: 1620px;

$nav-title-size: 30px;
$nav-subtitle-size: 18px;
$nav-link-size: 20px;
$nav-footer-size: 12px;
$post-title-size: 30px;
$post-subtitle-size: 14px;
$post-summary-size: 16px;
$post-body-size: 16px;
$post-meta-size: 16px;
$tag-category-title-size: 22px;
$toc-size: 16px;

$dark-accent: darken($color-accent, 10%);
$deep-dark-accent: darken($color-accent, 50%);
$color-text: $deep-dark-accent;

@if lightness($color-accent) <20% {
  $dark-accent: $color-accent;
  $deep-dark-accent: $color-accent;
  $color-text: $deep-dark-accent;
}

$single-column-max-width: 1020px;
$single-column-drawer-width: 260px;
$single-column-nav-title-size: 28px;
$single-column-nav-subtitle-size: 20px;
$single-column-nav-link-size: 18px;
$single-column-nav-footer-size: 13px;
$single-column-post-title-size: 22px;
$single-column-post-summary-size: 16px;
$single-column-post-body-size: 16px;
$single-column-post-meta-size: 14px;
$single-column-tag-category-title-size: 14px;
$single-column-toc-size: 14px;

$h1: 30px;
$h-diff: 3px;

::selection {
  background: rgba($color-accent, 0.4);
}

body {
  background: $back-container-background;
  padding: 0;
  margin: 0;
  font-family: $default-font-list;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
  text-rendering: optimizeLegibility !important;
  -webkit-font-smoothing: antialiased !important;
  color: $color-text;
}

* {
  color: $deep-dark-accent;
  //line-height: 1.7em;
  word-wrap: break-word;
  box-sizing: border-box;
}

h1,
h2,
h3 {
  font-weight: 400;
}

h1 {
  font-size: $h1;
  margin: 20px auto;
}

h2 {
  font-size: $h1 - 2 * $h-diff;
  margin: 20px auto;
}

h3 {
  font-size: $h1 - 3 * $h-diff;
  margin: 20px auto;
}

h4 {
  font-size: $h1 - 3 * $h-diff;
  padding: 20px auto;
}

h5 {
  font-size: $h1 - 3 * $h-diff - 1;
  padding: 10px auto;
}

h6 {
  font-size: $h1 - 3 * $h-diff - 2;
  padding: 10px auto;
}

textarea,
select,
input,
button {
  outline: none !important;
}

table {
  table-layout: fixed;
  overflow-x: scroll;
}

button {
  cursor: hand;
  cursor: pointer;
}

code {
  color: $dark-accent;
  background: rgba($color-accent, 0.07) !important;
  padding: 2px 5px;
  border-radius: 3px;
  font-family: $mono-font-list;
}

pre {
  //background: rgba(46,46,46, 1) !important;
  //color: rgba(255,255,255, 1);
  background: rgba($color-accent, 0.07);
  padding: 12px 15px;
  border-radius: 5px;
  font-family: $mono-font-list;
  * {
    background: none;
    font-family: $mono-font-list !important;
  }
  code {
    padding: 0;
    * {
      color: inherit;
    }
  }
}

blockquote {
  padding: 10px 20px;
  border-left: 3px solid rgba($color-accent, 0.7);
  color: $dark-accent;
  background: rgba($color-accent, 0.05);
  p {
    margin-bottom: 0;
  }
  * {
    color: $dark-accent;
  }
}

a {
  color: $color-accent;
  &:hover {
    color: darken($color-accent, 10%);
    text-underline-position: under;
  }
  @media screen and (max-width: $single-column-max-width) {
    &:hover {
      text-decoration: none !important;
    }
  }
}

.a-block {
  display: block;
  text-decoration: none !important;
  &:hover {
    text-decoration: none !important;
  }
}

.no-margin {
  margin: 0;
}

.no-padding {
  padding: 0;
}

.no-overflow {
  overflow: hidden !important;
}

.animated-visibility {
  transition: visibility 0s, opacity 0.5s linear;
  visibility: visible;
  opacity: 1;
}

.invisible {
  visibility: hidden;
  opacity: 0;
}

.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.3s;
}

.fade-enter,
.fade-leave-to {
  opacity: 0;
}

// dirty hack for livere
#lv-container {
  padding: 0 30px;

  @media screen and (max-width: $single-column-max-width) {
    padding: 0 15px;
  }
}
/* ... */

